<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_new_task"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_note"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_address"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/postalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="" />

    <Button
        android:id="@+id/btn_find_on_map"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_place" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_dedline"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/dedline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/tv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <EditText
        android:id="@+id/nt_edt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/priority_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/priority_high" />

        <RadioButton
            android:id="@+id/priority_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_normal" />

        <RadioButton
            android:id="@+id/priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTask" />

</LinearLayout>