<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/edt_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_new_task"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/edt_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_note"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edt_task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/edt_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_address"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edt_postalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/edt_btn_find_on_map"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_place" />

    <TextView
        android:id="@+id/edt_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_dedline"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edt_dedline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/edt_tv10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edit_edt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/edt_tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/edt_priority_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/edt_priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/priority_high" />

        <RadioButton
            android:id="@+id/edt_priority_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_normal" />

        <RadioButton
            android:id="@+id/edt_priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low" />
    </RadioGroup>

    <Button
        android:id="@+id/edt_btn_addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task" />

</LinearLayout>