<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/status" />

    <TextView
        android:id="@+id/dialog_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dialogButtonOK"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_image"
        android:layout_marginTop="42dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/makeDoneBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dialogButtonOK"
        android:layout_toRightOf="@+id/dialogButtonOK"
        android:text="@string/status_change" />

    <Button
        android:id="@+id/btn_showOnMap"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/makeDoneBtn"
        android:layout_toRightOf="@+id/makeDoneBtn"
        android:text="@string/show_on_map" />

</RelativeLayout>